# Bachelor_Thesis

replika_data_analysis/: README.md  main.py  pyproject.toml
replika_data_analysis/data/processed/: claude_pilot_results.csv  claude_relevant_posts.csv  descriptive_stats.json  pilot_posts.csv
replika_data_analysis/data/processed/qualitative/: analysis_results.xlsx  codebook_manual_check.xlsx  llm_coded_results.csv  llm_progress.json  validation_results.csv  validation_results.xlsx
replika_data_analysis/notebooks/archive/: descriptive_statistics.ipynb
replika_data_analysis/src/: config.py  constants.py  descriptive_stats.py  filter_full.py  filter_ollama.py  filter_pilot.py  models.py  scraper.py
replika_data_analysis/src/qualitative_analysis/: analysis.py  llm_coding.py  models.py  validation.py
